Changes to addapt filter on mobile and desktop style (pending final fixes)

--- a/app/design/frontend/Vass/PU/Magento_Catalog/web/css/source/module/_toolbar.less
+++ b/app/design/frontend/Vass/PU/Magento_Catalog/web/css/source/module/_toolbar.less
@@ -34,6 +34,7 @@
 
     .toolbar-amount {
         display: block;
+        .lib-font-size(@font-size__l);
         line-height: @toolbar-mode-icon-font-size + 2;
         margin: 0;
         padding: 8px 0 0;
@@ -49,7 +50,7 @@
         text-align: center;
         &:extend(.abs-add-clearfix all);
 
-        &:before, 
+        &:before,
         &:after {
             content: none;
         }
@@ -71,7 +72,10 @@
     }
 
     .sorter {
-        padding: 4px 0 0;
+            position: absolute;
+            top: 11px;
+            right: 7px;
+            padding: 4px 0 0;
 
         .control:has(select):after {
             top: ~"calc((56px / 2) + 2px)";
